--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.1",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "package-name": "^0.1.0",
+    "popper.js": "^1.16.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
